Memory DB Project Java 17 -> Java 11